--- a/nextjs/src/styles/ChannelCard.module.css
+++ b/nextjs/src/styles/ChannelCard.module.css
@@ -85,10 +85,14 @@
   font-weight: 400;
   line-height: 26px;
   letter-spacing: -0.2px;
+  padding-top: 20px;
 }
 
 .privacy-button-container {
   text-align: center;
+  display: inline-block;
+  padding-top: 40px;
+  padding-left: 10px;
 }
 
 .add-channel-card {
