--- a/nextjs/src/styles/globals.css
+++ b/nextjs/src/styles/globals.css
@@ -183,7 +183,7 @@ hr {
 @media (width <= 468px) {
   .content-background, .main {
     margin:0;
-    padding: 0;
+    padding: 10px;
     background: var(--leo-color-container-background);
   }
 }
