--- a/app/views/publishers/two_factor_authentications_removals/new.html.slim
+++ b/app/views/publishers/two_factor_authentications_removals/new.html.slim
@@ -6,9 +6,11 @@
 
       h4.single-panel--headline= t("publishers.two_factor_authentication_removal.heading")
 
-      p= t("publishers.two_factor_authentication_removal.leadin")
+      .my-3.text-left
+        p= t("publishers.two_factor_authentication_removal.leadin")
 
-      == t("publishers.two_factor_authentication_removal.note")
+      .my-3.text-left
+        == t("publishers.two_factor_authentication_removal.note")
       .my-3.text-left
         == t("publishers.two_factor_authentication_removal.removals")
 
